# local-indic-dubbing-pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  open_source_indic_speech_dubbing_pipeline_font_2x.pptx  requirements-asr.txt  requirements-translation.txt  requirements-tts.txt  requirements.txt
01_indic_dubbing_pipeline/: CONTRIBUTING.md  README.md  pyproject.toml
01_indic_dubbing_pipeline/docs/: api_reference.md  architecture.md  demo_walkthrough.md  interview_notes.md  open_source_stack.md  project_explanation.md
01_indic_dubbing_pipeline/scripts/: run_demo_stub.ps1  run_demo_stub.sh  run_tests.sh
01_indic_dubbing_pipeline/src/dubbing_pipeline/: api.py  asr.py  audio.py  config.py  schemas.py  translate.py  tts.py  utils.py
01_indic_dubbing_pipeline/tests/: test_api.py  test_config.py  test_eval.py  test_pipeline.py
docs/: evaluation_report_template.md  extension_plan.md  github_release_checklist.md
examples/: glossary_hi_en.json  sample_config.json  sample_transcript.txt
scripts/: run_tests.ps1
src/dubbing_pipeline/: __init__.py  api.py  asr.py  cli.py  config.py  eval.py  pipeline.py  storage.py
tests/: test_api.py  test_config.py  test_pipeline.py
