[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indic-dubbing-pipeline"
version = "0.1.0"
description = "Stub-first open-source Indic speech-to-speech dubbing prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1", "python-multipart>=0.0.9"]

[project.scripts]
dubbing-pipeline = "dubbing_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

